--- a/docs/members/3-ordinaryMembers/在下基岩菌（6年电教）.md
+++ b/docs/members/3-ordinaryMembers/在下基岩菌（6年电教）.md
@@ -1,7 +1,7 @@
 ---
 layout: doc
 ---
-# 在下基岩菌（7年电教）
+# 在下基岩菌（群昵称：奶茶重度依赖）
 ![An image](http://q1.qlogo.cn/g?b=qq&nk=1852492513&s=160)
 _________________
 
